--- a/index.html
+++ b/index.html
@@ -4,15 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- google Font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <!-- vanila css link -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- tailewind css cdn link -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <title> Top Five Best Players </title>
 </head>
-<body>
+<body class="bg-stone-300">
+
+    <header>
+
+        <div class="grid grid-cols-4 content-end header-section ">
+            <div>
+                <img class="w-full" src="images/header.png" alt="">
+            </div>
+            <div class="col-span-2 text-white p-5 text-center">
+                <h1 class="header-title font-bold mb-8 "> Top Five <span class="text-orange-400">Best Players</span> </h1>
+                <h3 class="text-xl">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam onsequat sunt nostrud amet.</h3>
+            </div>
+            <div class="flex flex-col">
+                <img class="w-7/12 pl-20"  src="images/logo-1.png" alt="">
+                <img class=" w-7/12 self-end pt-5" src="images/logo-2.png" alt="">
+            </div>
+        </div>
+
+    </header>
 
 
 
 
 
-    
+
 
 
 
