add footer section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 <body class="bg-gray-900">
 
+    <!--------------
+     header section
+    ------------- -->
     <header>
 
         <div class="grid grid-cols-4 content-end header-section ">
@@ -34,13 +37,16 @@
 
     </header>
 
+    <!------------
+     main section
+    ------------>
     <main>
         <section class="my-10 py-10">
             <div class="grid grid-cols-4 gap-y-5 gap-x-5 mx-auto w-10/12 ">
                 <!-- card 1 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800 ">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-1.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -48,9 +54,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 2 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-2.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -58,9 +64,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 3 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-3.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -76,9 +82,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 4 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-4.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -86,9 +92,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 5 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-5.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -96,9 +102,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 6 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-6.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800  bg-black bg-opacity-75">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -115,9 +121,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 7 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-7.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -125,9 +131,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 8 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-8.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -135,9 +141,9 @@
                 </div>
                 <!-- card end -->       
                 <!-- card 9 -->
-                <div class="w-64 mx-h-80 bg-black bg-opacity-75 rounded-none border-y border-sky-800">
+                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                     <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-9.png">
-                    <div class=" text-center text-white border-x border-lime-800 ">
+                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                     <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                     <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
                     <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
@@ -150,6 +156,16 @@
             </div>
         </section>
     </main>
+
+    <!------------
+    footer section
+    -------------->
+    <footer class="text-center text-white text-xl my-10 py-10 border-t border-gray-600 ">
+        Copyright @ 2022 All Rights Reserved.
+    </footer>
+
+
+
 
 
 
