calculate selected card

--- a/index.html
+++ b/index.html
@@ -41,85 +41,83 @@
      main section
     ------------>
     <main>
-        <section class="my-10 py-10">
-            <div class="grid grid-cols-4 gap-y-5 gap-x-5 mx-auto w-10/12 ">
-                <!-- card 1 -->
-                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800 ">
-                    <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-1.png">
-                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
-                    <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
-                    <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
-                    <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+        <section class="my-10 py-10 flex mx-auto w-10/12 gap-y-5 gap-x-5 ">
+            <div>
+                <div class="grid grid-cols-3 gap-y-5 gap-x-5 ">
+                        <!-- card 1 -->
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800 ">
+                        <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-1.png">
+                        <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
+                            <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
+                            <p class="opacity-75" > 36 Goals - 120 Assist </p>
+                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                        </div>
                     </div>
-                </div>
-                <!-- card end -->       
-                <!-- card 2 -->
-                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
-                    <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-7.png">
-                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
-                    <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
-                    <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
-                    <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                    <!-- card end -->       
+                    <!-- card 2 -->
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
+                        <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-7.png">
+                        <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
+                            <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
+                            <p class="opacity-75" > 36 Goals - 120 Assist</p>
+                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                        </div>
                     </div>
-                </div>
-                <!-- card end -->       
-                <!-- card 3 -->
-                <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
-                    <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-3.png">
-                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
-                    <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
-                    <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
-                    <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                    <!-- card end -->       
+                    <!-- card 3 -->
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
+                        <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-3.png">
+                        <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
+                            <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
+                            <p class="opacity-75" > 36 Goals - 120 Assist </p>
+                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                        </div>
                     </div>
-                </div>
-                <!-- card end -->       
-                <!-- card 1 -->
-                <div class="w-64 mx-h-80 rounded-none text-white p-5 bg-black bg-opacity-75 border border-sky-800  ">
+                    <!-- card end -->           
+                    <!-- card 4 -->
+                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                        <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-4.png">
+                        <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
+                            <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
+                            <p class="opacity-75" > 36 Goals - 120 Assist</p>
+                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                        </div>
+                    </div>
+                    <!-- card end -->       
+                    <!-- card 5 -->
+                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                        <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-5.png">
+                        <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
+                            <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
+                            <p class="opacity-75" > 36 Goals - 120 Assist </p>
+                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                        </div>
+                    </div>
+                    <!-- card end -->       
+                    <!-- card 6 -->
+                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                        <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-6.png">
+                        <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
+                            <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
+                            <p class="opacity-75" > 36 Goals - 120 Assist </p>
+                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                        </div>
+                    </div>
+                    <!-- card end -->   
+                </div>        
+            </div>
+
+            <div class="flex flex-col gap-y-5">
+                 <!-- card 1 -->
+                 <div class="w-64 mx-h-80 rounded-none text-white p-5 bg-black bg-opacity-75 border border-sky-800  ">
                     <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Selected - V</h1>
-                    <div class="overflow-x-auto mt-8">
-                        <!-- <table class=" w-full">
-                          <tbody> -->
-                            <!-- row 1 -->
-                            <!-- <tr>
-                              <th>1</th>
-                              <td>Cy Ganderton</td>
-                            </tr>
-                          </tbody>
-                        </table> -->
+                    <div id="addToSelectedCard" class="overflow-x-auto mt-8">
+                        
+
                     </div>
                 </div>
-                <!-- card end -->       
-                <!-- card 4 -->
-                <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
-                    <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-4.png">
-                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
-                    <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
-                    <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
-                    <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
-                    </div>
-                </div>
-                <!-- card end -->       
-                <!-- card 5 -->
-                <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
-                    <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-5.png">
-                    <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
-                    <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
-                    <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
-                    <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
-                    </div>
-                </div>
-                <!-- card end -->       
-                <!-- card 6 -->
-                <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
-                    <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-6.png">
-                    <div class=" text-center text-white border-x border-lime-800  bg-black bg-opacity-75">
-                    <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
-                    <p class="opacity-75" ><span>36 Goals </span>.<span>120 Assist</span></p>
-                    <button class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
-                    </div>
-                </div>
-                <!-- card end -->       
-                <!-- card 1 -->
+                <!-- card end --> 
+                <!-- card 2 -->
                 <div class="w-64 mx-h-80  rounded-none border border-sky-800 text-white p-5 bg-black bg-opacity-75 ">
                     <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Budget </h1>
                     <div class="mt-5">
@@ -138,8 +136,9 @@
                         <p class="flex justify-between items-center"> Player Total <span>$<span></span></span></p>
                     </div>   
                 </div>
-                <!-- card end -->            
+                <!-- card end -->  
             </div>
+
         </section>
     </main>
 
