--- a/index.html
+++ b/index.html
@@ -112,33 +112,31 @@
                  <div class="w-64 mx-h-80 rounded-none text-white p-5 bg-black bg-opacity-75 border border-sky-800  ">
                     <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Selected - V</h1>
                     <div id="addToSelectedCard" class="overflow-x-auto mt-8">
-                        
-
+                        <!-- dynamic table add -->
                     </div>
                 </div>
                 <!-- card end --> 
                 <!-- card 2 -->
                 <div class="w-64 mx-h-80  rounded-none border border-sky-800 text-white p-5 bg-black bg-opacity-75 ">
-                    <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Budget </h1>
+                        <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Budget </h1>
                     <div class="mt-5">
-                        <p class="flex justify-between items-center"> Per Player <input class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
+                        <p class="flex justify-between items-center"> Per Player <input id="per-Player-field"  class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
                         <div class="flex justify-center pt-5">
-                            <button class="bg-blue-800 px-16 text-md font-semibold py-2 " >Calculate</button> 
+                            <button id="calculate-button" class="bg-blue-800 px-16 text-md font-semibold py-2 " >Calculate</button> 
                         </div>
                     </div>
                     <div class="mt-5">
-                        <p class="flex justify-between items-center"> Player Expenses <span>$<span></span></span></p>
-                        <p class="flex justify-between items-center py-5 "> Manager <input class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
-                        <p class="flex justify-between items-center"> Coach <input class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
+                        <p class="flex justify-between items-center"> Player Expenses <span>$<span id ="total-player-cost"></span></span></p>
+                        <p class="flex justify-between items-center py-5 "> Manager <input id="manager-amount" class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
+                        <p class="flex justify-between items-center"> Coach <input id="coach-amount" class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
                         <div class="flex justify-center my-5">
-                            <button class="bg-blue-800 px-12 text-md font-semibold py-2 " >Calculate Total</button> 
+                            <button id="calculate-total-button" class="bg-blue-800 px-12 text-md font-semibold py-2 " >Calculate Total</button> 
                         </div>
-                        <p class="flex justify-between items-center"> Player Total <span>$<span></span></span></p>
+                        <p class="flex justify-between items-center"> Player Total <span>$<span id="player-total-amount"></span></span></p>
                     </div>   
                 </div>
                 <!-- card end -->  
             </div>
-
         </section>
     </main>
 
@@ -148,29 +146,6 @@
     <footer class="text-center text-white text-xl my-10 py-10 border-t border-gray-600 ">
         Copyright @ 2022 All Rights Reserved.
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
-
-
 
     <!-- ---js file link--- -->
     <script src="js/utilitys.js"></script>
