--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                             <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                             <p class="opacity-75" > 36 Goals - 120 Assist </p>
-                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                            <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->       
@@ -56,7 +56,7 @@
                         <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                             <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                             <p class="opacity-75" > 36 Goals - 120 Assist</p>
-                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                            <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->       
@@ -66,7 +66,7 @@
                         <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                             <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                             <p class="opacity-75" > 36 Goals - 120 Assist </p>
-                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                            <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->           
@@ -76,7 +76,7 @@
                         <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                             <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                             <p class="opacity-75" > 36 Goals - 120 Assist</p>
-                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                            <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->       
@@ -86,7 +86,7 @@
                         <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                             <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                             <p class="opacity-75" > 36 Goals - 120 Assist </p>
-                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                            <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->       
@@ -96,7 +96,7 @@
                         <div class=" text-center text-white border-x border-lime-800 bg-black bg-opacity-75 ">
                             <h2 class="text-4xl  font-semibold py-3 ">Life hack</h2>
                             <p class="opacity-75" > 36 Goals - 120 Assist </p>
-                            <button onclick="cardButton(this)" class=" bg-blue-800 rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
+                            <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->   
@@ -109,7 +109,7 @@
                     <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Selected <span id="list-number">0</span></h1>
                         <!--  table add -->
                     <div class="overflow-x-auto mt-5">
-                        <table class="table w-60 mx-auto text-black">
+                        <table class="table w-60 mx-auto text-black ">
                             <tbody class="add-table">
                                 
                             </tbody>
