--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="w-64 mx-h-80 rounded-none border-y border-sky-800 ">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-1.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 "> Viktor Axelsen </h2>
+                            <h2 class="text-2xl  font-semibold py-3 "> Viktor Axelsen </h2>
                             <p class="opacity-75" > Age - 28 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
@@ -62,7 +62,7 @@
                     <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-2.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Chen Long</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Chen Long</h2>
                             <p class="opacity-75" > Age - 33 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
@@ -72,67 +72,67 @@
                     <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-3.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">PV Sindhu</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">PV Sindhu</h2>
                             <p class="opacity-75" > Age - 27 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->           
                     <!-- card 4 -->
-                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-4.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Anthony Sinisuka Ginting</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Anthony Sinisukan </h2>
                             <p class="opacity-75" > Age - 25 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->       
                     <!-- card 5 -->
-                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-5.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Ratchanok Intanon</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Ratchanok Intanon</h2>
                             <p class="opacity-75" > Age - 27 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->       
                     <!-- card 6 -->
-                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-6.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Tai Tzu-ying</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Tai Tzu-ying</h2>
                             <p class="opacity-75" > Age - 28 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->   
                     <!-- card 7 -->
-                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-7.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Kento Momota</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Kento Momota</h2>
                             <p class="opacity-75" > Age - 27 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->   
                     <!-- card 8 -->
-                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-8.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Lakshya Sen</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Lakshya Sen</h2>
                             <p class="opacity-75" > Age - 21 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
                     </div>
                     <!-- card end -->   
                     <!-- card 9 -->
-                    <div class="w-64 mx-h-80 rounded-none border-t border-sky-800">
+                    <div class="w-64 mx-h-80 rounded-none border-y border-sky-800">
                         <img class="w-full border-x border-amber-800 " src="images/Card-Player/card-9.jpg">
                         <div class=" text-center text-white border-x border-lime-800 bg-gray-900 bg-opacity-75 ">
-                            <h2 class="text-4xl  font-semibold py-3 ">Carolina Marin</h2>
+                            <h2 class="text-2xl  font-semibold py-3 ">Carolina Marin</h2>
                             <p class="opacity-75" > Age - 29 years </p>
                             <button onclick="cardButton(this)" class=" button-clicked-color rounded-none px-20 py-2 my-3 font-semibold text-xl ">SELECT</button> 
                         </div>
@@ -143,7 +143,7 @@
 
             <div class="flex flex-col gap-y-5">
                  <!-- card 1 -->
-                 <div class="w-80 mx-h-80 rounded-none text-white p-5 bg-black bg-opacity-75 border border-sky-800  ">
+                 <div class="w-80 mx-h-80 rounded-none text-black p-5 bg-white border border-sky-800  ">
                     <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Selected <span id="list-number">0</span></h1>
                         <!--  table add -->
                     <div class="overflow-x-auto mt-5">
@@ -156,22 +156,22 @@
                 </div>
                 <!-- card end --> 
                 <!-- card 2 -->
-                <div class="w-80 mx-h-80  rounded-none border border-sky-800 text-white p-5 bg-black bg-opacity-75 ">
+                <div class="w-80 mx-h-80  rounded-none border border-sky-800  p-5 text-black bg-white ">
                         <h1 class="text-center font-semibold text-2xl mt-2 border-b border-gray-500 pb-4"> Budget </h1>
                     <div class="mt-5">
-                        <p class="flex justify-between items-center"> Per Player <input id="per-Player-field"  class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
+                        <p class="flex justify-between items-center text-xl font-semibold "> Per Player <input id="per-Player-field"  class="w-24 py-2 border-2 text-black border-gray-900 px-1 " type="text"></p>
                         <div class="flex justify-center pt-5">
-                            <button id="calculate-button" class="bg-blue-800 px-16 text-md font-semibold py-2 " >Calculate</button> 
+                            <button id="calculate-button" class="bg-blue-800 text-white px-24 text-md font-semibold py-2 " >Calculate</button> 
                         </div>
                     </div>
                     <div class="mt-5">
-                        <p class="flex justify-between items-center"> Player Expenses <span>$<span id ="total-player-cost"></span></span></p>
-                        <p class="flex justify-between items-center py-5 "> Manager <input id="manager-amount" class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
-                        <p class="flex justify-between items-center"> Coach <input id="coach-amount" class="w-24 py-2 border-2 bg-black bg-opacity-75 text-white px-1 " type="text"></p>
+                        <p class="flex justify-between items-center text-xl font-semibold "> Player Expenses <span>$<span id ="total-player-cost"></span></span></p>
+                        <p class="flex justify-between items-center py-5 text-xl font-semibold "> Manager <input id="manager-amount" class="w-24 py-2 border-2 text-black border-gray-900 px-1 " type="text"></p>
+                        <p class="flex justify-between items-center text-xl font-semibold "> Coach <input id="coach-amount" class="w-24 py-2 border-2 text-black border-gray-900 px-1 " type="text"></p>
                         <div class="flex justify-center my-5">
-                            <button id="calculate-total-button" class="bg-blue-800 px-12 text-md font-semibold py-2 " >Calculate Total</button> 
+                            <button id="calculate-total-button" class="bg-blue-800 text-white px-20 text-md font-semibold py-2 " >Calculate Total</button> 
                         </div>
-                        <p class="flex justify-between items-center"> Player Total <span class="text-orange-300">$<span id="player-total-amount"></span></span></p>
+                        <p class="flex justify-between items-center text-xl font-semibold "> Player Total <span class="text-orange-500">$<span id="player-total-amount"></span></span></p>
                     </div>   
                 </div>
                 <!-- card end -->  
